<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="431dp"
    android:layout_height="731dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="75dp"
            android:layout_marginLeft="40dp"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:background="@drawable/v3"
            />
        <TextView
            android:layout_width="305dp"
            android:layout_height="65dp"
            android:text="@string/reg"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="43dp"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/pink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:layout_marginTop="41dp"
        android:background="@color/lightblue"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="283dp"
            android:layout_height="38dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="65dp"
            android:text="@string/text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editLogin"
                android:layout_width="282dp"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/login"
                android:inputType="text"
                android:background="@drawable/line"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="48dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="282dp"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/pass"
                android:inputType="text"
                android:textSize="14sp"
                android:textStyle="bold"

                android:background="@drawable/line"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVhod"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="183.05dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/blue"
            android:text="@string/vhod"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</LinearLayout>