<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="411dp"
    android:layout_height="757dp"
    tools:context=".Thried_Activity"
    android:orientation="vertical">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="12dp"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:background="@drawable/arrow"
        android:contentDescription="@string/naz" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/naz"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/blue"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="365dp"
        android:layout_height="58dp"
        android:text="@string/rezras"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="519dp"
        android:layout_marginTop="42dp"
        android:background="@color/lightblue"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="127dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:id="@+id/textMeters"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:text="@string/kolvo2"
                android:textSize="12sp"
                android:layout_marginTop="11dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                >
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:layout_marginTop="133dp"
            android:layout_marginLeft="127dp"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="161dp"
                android:layout_height="55dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/white"
                >
            </FrameLayout>
            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Result"
                android:textSize="14sp"
                android:layout_marginTop="7.86dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginLeft="50dp" />
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReg"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="33dp"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/blue"
            android:background="@drawable/button"
            android:text="@string/Reg"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>